force-app/main/default/objects/InvoiceLine__c/InvoiceLine__c.object-meta.xml
<CustomObject>
    <label>請求明細</label>
    <nameField>
        <displayFormat>INVL-{0000000000}</displayFormat>
        <label>請求明細名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>