force-app/main/default/objects/InvoiceLine__c/fields/DiscountedUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>DiscountedUnitPrice__c</fullName>
    <label>値引後単価</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>