force-app/main/default/objects/InvoiceLine__c/fields/DiscountRate__c.field-meta.xml
<CustomField>
    <fullName>DiscountRate__c</fullName>
    <label>値引率</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>