force-app/main/default/objects/InvoiceLine__c/fields/Freee_Account_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Freee_Account_Item_Id__c</fullName>
    <label>Freee勘定科目ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>