force-app/main/default/objects/InvoiceLine__c/fields/Freee_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Freee_Line_Id__c</fullName>
    <label>freee明細ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>