force-app/main/default/objects/InvoiceLine__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>親請求書</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>請求明細</relationshipLabel>
    <relationshipName>INV3</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>