force-app/main/default/objects/InvoiceLine__c/fields/LineType__c.field-meta.xml
<CustomField>
    <fullName>LineType__c</fullName>
    <label>請求明細種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>継続費用</fullName>
            </value>
            <value>
                <fullName>初期費用</fullName>
            </value>
            <value>
                <fullName>年間利用料</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>