force-app/main/default/objects/InvoiceLine__c/fields/MigrationSourceLineWork__c.field-meta.xml
<CustomField>
    <fullName>MigrationSourceLineWork__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>移行元Freee請求明細Work</label>
    <referenceTo>Mig_FreeeInvoiceLineWork__c</referenceTo>
    <relationshipLabel>移行作成請求明細</relationshipLabel>
    <relationshipName>MigratedInvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>