force-app/main/default/objects/InvoiceLine__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>請求明細</relationshipLabel>
    <relationshipName>Product2_2</relationshipName>
    <type>Lookup</type>
</CustomField>