force-app/main/default/objects/InvoiceLine__c/fields/ProductMaster__c.field-meta.xml
<CustomField>
    <fullName>ProductMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商品マスタ</label>
    <referenceTo>ProductMaster__c</referenceTo>
    <relationshipLabel>請求明細</relationshipLabel>
    <relationshipName>InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>