force-app/main/default/objects/InvoiceLine__c/fields/Reduced_Tax__c.field-meta.xml
<CustomField>
    <fullName>Reduced_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>軽減税率</label>
    <type>Checkbox</type>
</CustomField>