force-app/main/default/objects/InvoiceLine__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <label>税率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>