force-app/main/default/objects/InvoiceLine__c/fields/Withholding__c.field-meta.xml
<CustomField>
    <fullName>Withholding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>源泉徴収</label>
    <type>Checkbox</type>
</CustomField>